--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12003,6 +12003,8 @@ footer {
   color: #777;
   font-size: 13px;
   font-weight: bold;
+  /* User gravatar */
+  /* User gravatar */
 }
 footer a {
   color: #555;
@@ -12013,4 +12015,44 @@ footer a:hover {
 footer img.brand-icon {
   width: 17px;
   height: 17px;
+}
+footer section.user_info {
+  padding-bottom: 10px;
+  margin-top: 20px;
+  text-align: center;
+}
+footer section.user_info .gravatar {
+  float: none;
+  max-width: 70px;
+}
+footer section.user_info h1, footer section.user_info .h1 {
+  font-size: 1.4em;
+  letter-spacing: -1px;
+  margin-bottom: 3px;
+  margin-top: 15px;
+}
+footer .gravatar {
+  float: left;
+  max-width: 50px;
+  border-radius: 50%;
+}
+footer section.user_info {
+  padding-bottom: 10px;
+  margin-top: 20px;
+  text-align: center;
+}
+footer section.user_info .gravatar {
+  float: none;
+  max-width: 70px;
+}
+footer section.user_info h1, footer section.user_info .h1 {
+  font-size: 1.4em;
+  letter-spacing: -1px;
+  margin-bottom: 3px;
+  margin-top: 15px;
+}
+footer .gravatar {
+  float: left;
+  max-width: 50px;
+  border-radius: 50%;
 }
