--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12005,6 +12005,7 @@ footer {
   font-weight: bold;
   /* User gravatar */
   /* User gravatar */
+  /* User edit*/
 }
 footer a {
   color: #555;
@@ -12055,4 +12056,12 @@ footer .gravatar {
   float: left;
   max-width: 50px;
   border-radius: 50%;
+}
+footer .gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+}
+footer .gravatar_edit .gravatar {
+  float: none;
+  max-width: 100px;
 }
