--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12006,6 +12006,7 @@ footer {
   /* User gravatar */
   /* User gravatar */
   /* User edit*/
+  /* Status */
 }
 footer a {
   color: #555;
@@ -12064,4 +12065,8 @@ footer .gravatar_edit {
 footer .gravatar_edit .gravatar {
   float: none;
   max-width: 100px;
+}
+footer .status-delete-btn {
+  width: -moz-max-content;
+  width: max-content;
 }
